--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start": "pm2 start ecosystem.config.js",
     "restart": "pm2 reload ecosystem.config.js",
     "db:insert": "ts-node src/database/scripts/insert-data.ts",
-    "test": "cross-env NODE_ENV=testing jest",
-    "test:watch": "cross-env NODE_ENV=testing jest --watch",
-    "test:coverage": "cross-env NODE_ENV=testing jest --coverage"
+    "test": "jest --config jest.config.ts",
+    "test:watch": "jest --config jest.config.ts --watch",
+    "test:coverage": "jest --config jest.config.ts --coverage"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
@@ -26,6 +26,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.4",
