--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,14 @@
     "noUnusedParameters": true,
     "alwaysStrict": true,
     "pretty": true,
-    "baseUrl": "./src", // Ensure baseUrl points to src directory
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"] // Alias mapping for "@/config" to resolve to "./src/config"
+      "@/*": ["*"]
     },
-    "types": ["node", "jest"]
+    "types": ["node", "jest"] // Add Jest to the types array
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"],
+  "exclude": ["node_modules", "build", "**/*.spec.ts"], // Adjust exclusions if needed
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
